# play_mpoly_junior_app

./: README  app.py  board.py  classes.py  game_explorer.py  pyproject.toml  stat_explorer.py
game_data/2p/: 0.csv  1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
game_data/3p/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
game_data/4p/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
