[tool.poetry]
name = "play_mpoly_junior_app"
version = "0.1.0"
description = ""
authors = ["houfu <houfu@outlook.sg>"]

[tool.poetry.dependencies]
python = "^3.8.6"
streamlit = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
